Changed Shutdown after Reset to Restart